# KorgMAX

./: compare_basics.py  pyproject.toml
basics/: JAX Basics.ipynb  Python Basics.ipynb  compare_basics.py  jax_basics.py
benchmark/: float32_test.py  profile_synthesis.py
fitting/: Fit spectrum in python.ipynb  compare_fitting.py
korg_jax/: __init__.py  abundances.py  atmosphere.py  atomic_data.py  constants.py  cubic_splines.py  hydrogen_lines.py  interpolation.py  line_absorption.py  linelist.py  molecular_cross_sections.py  radiative_transfer.py  read_statmech.py  species.py  statmech.py  synth.py  synthesize.py  utils.py  voigt.py  wavelengths.py
korg_jax/continuum_absorption/: __init__.py  helium.py  hydrogen.py  hydrogenic.py  metals.py  scattering.py
korg_jax/tests/: test_end_to_end.py
test/data/linelists/: long-extract-all-air-wavenumber.vald
