[project]
name = "korg-jax"
version = "0.1.0"
description = "JAX port of the Korg stellar spectral synthesis code"
requires-python = ">=3.11,<3.14"
dependencies = [
    "jax[cpu]>=0.4.30",
    "numpy>=1.26",
    "scipy>=1.13",
    "h5py>=3.11",
    "pandas>=2.2",
    "juliacall>=0.9",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["korg_jax"]

[tool.pytest.ini_options]
testpaths = ["korg_jax/tests"]
pythonpath = ["."]
